--- a/src/pages/Landing/styles.css
+++ b/src/pages/Landing/styles.css
@@ -54,6 +54,18 @@
   margin-bottom: 1rem;
 }
 
+/* styles for safari mob */
+@supports (-webkit-touch-callout: none) {
+  #counter-page-btn {
+    border: none;
+    -webkit-appearance: none;
+  }
+  .landing-container {
+    width: 90vw;
+    height: 80vh;
+  }
+}
+
 @media only screen and (min-width: 320px) {
   .landing-container {
     flex-direction: column;
